# burn

./: Cargo.toml
burn-book/src/advanced/: no-std.md
burn-import/src/onnx/: coalesce.rs  from_onnx.rs  proto_conversion.rs
crates/burn-autodiff/src/: backend.rs  grads.rs  lib.rs  tensor.rs
crates/burn-autodiff/src/checkpoint/: builder.rs  strategy.rs
crates/burn-autodiff/src/ops/: activation.rs  backward.rs  base.rs  bool_tensor.rs  complex_tensor.rs  distributed.rs  general.rs  int_tensor.rs  maxmin.rs  mod.rs  module.rs  sort.rs  tensor.rs
crates/burn-autodiff/src/runtime/: client.rs  graph.rs  server.rs
crates/burn-backend/: Cargo.toml
crates/burn-backend-tests/benches/: quantization_ops.rs
crates/burn-backend-tests/tests/tensor/: distributed.rs
crates/burn-backend/src/backend/: base.rs  complex.rs  device.rs  primitive.rs
crates/burn-backend/src/data/: compare.rs  tensor.rs
crates/burn-backend/src/element/: base.rs  cast.rs  complex.rs  scalar.rs
crates/burn-backend/src/tensor/: alias.rs  kind.rs
crates/burn-candle/: Cargo.toml
crates/burn-candle/src/: backend.rs  element.rs
crates/burn-collective/src/local/: server.rs  tensor_map.rs
crates/burn-collective/src/tests/: all_reduce.rs  reduce.rs
crates/burn-complex/: Cargo.toml
crates/burn-complex/src/: base.rs  kind.rs  lib.rs  split.rs  utils.rs
crates/burn-complex/src/base/: element.rs  simd.rs  split.rs
crates/burn-complex/src/split/: ops.rs
crates/burn-complex/src/tests/: mod.rs  ops.rs
crates/burn-complex/tests/: basic.rs  numeric.rs  ops.rs
crates/burn-complex/tests/common/: mod.rs
crates/burn-core/src/: lib.rs
crates/burn-core/src/record/: file.rs
crates/burn-core/tests/: test_derive_module.rs
crates/burn-cpu/src/: lib.rs
crates/burn-cubecl/: Cargo.toml
crates/burn-cubecl/src/: backend.rs  element.rs  fusion.rs
crates/burn-cuda/src/: lib.rs
crates/burn-derive/src/: lib.rs
crates/burn-derive/src/backend/: mod.rs
crates/burn-dispatch/: Cargo.toml
crates/burn-dispatch/src/: backend.rs  tensor.rs
crates/burn-flex/: Cargo.toml
crates/burn-flex/src/: backend.rs  tensor.rs
crates/burn-flex/src/ops/: binary.rs  cat.rs  comparison.rs  complex.rs  float.rs  gather_scatter.rs  general.rs  matmul.rs  mod.rs  reduce.rs  slice.rs  unary.rs
crates/burn-fusion/src/: backend.rs
crates/burn-fusion/src/ops/: bool_tensor.rs  general.rs  int_tensor.rs  mod.rs  tensor.rs
crates/burn-ir/src/: backend.rs  handle.rs  scalar.rs
crates/burn-ndarray/src/: backend.rs  element.rs
crates/burn-ndarray/src/ops/: bool_tensor.rs  complex_tensor.rs  int_tensor.rs  tensor.rs
crates/burn-nn/src/activation/: celu.rs  elu.rs  hard_shrink.rs  hard_sigmoid.rs  hard_swish.rs  leaky_relu.rs  shrink.rs  soft_shrink.rs  softplus.rs  thresholded_relu.rs
crates/burn-rl/src/transition_buffer/: base.rs
crates/burn-router/: Cargo.toml
crates/burn-router/src/: backend.rs  types.rs
crates/burn-router/src/channel/: base.rs
crates/burn-std/src/: lib.rs
crates/burn-store/benches/: unified_loading.rs  unified_saving.rs  zero_copy_loading.rs
crates/burn-tch/: Cargo.toml
crates/burn-tch/src/: backend.rs  element.rs  tensor.rs
crates/burn-vision/: Cargo.toml
crates/burn-wgpu/src/: lib.rs
examples/custom-cubecl-kernel/src/: backward.rs
examples/mnist/src/: data.rs
examples/notebook/: autodiff.ipynb  basic-tensor-op.ipynb
xtask/src/: main.rs
(+68 files in other folders)
