[package]
name = "burn-complex"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true


[features]
#no_std is a problem for later
#std = ["burn-tensor/std", "num-complex/std", "num-traits/std"]



[dependencies]
bon = { workspace = true }


ndarray = { workspace = true, optional = true }
tch = { workspace = true, optional = true }
burn-tensor = { path = "../burn-tensor", version = "=0.21.0-pre.3" }
burn-std = { path = "../burn-std", version = "=0.21.0-pre.3" }

bytemuck = { workspace = true }
cubecl = { workspace = true, optional = true }
derive-new = { workspace = true }
half = { workspace = true }
rand = { workspace = true, default-features = false }
num-traits = { workspace = true }
num-complex = { version = "0.4.6", default-features = false}
paste = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
burn-flex = { path = "../burn-flex",  features = ["complex"] }#, version = "=0.21.0-pre.3",    }
#burn-tensor-testgen = { path = "../burn-tensor-testgen", version = "=0.21.0-pre.3", default-features = false }
burn-backend-tests = { path = "../burn-backend-tests", version = "=0.21.0-pre.3", default-features = false, features = [
    "std",
] }



[lints]
workspace = true
