[package]
name = "burn-complex"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true


[features]
#no_std is a problem for later
#std = ["burn-tensor/std", "num-complex/std", "num-traits/std"]



[dependencies]
bon = { workspace = true }
burn-tensor = { workspace = true}
burn-std = { workspace = true }

bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
cubecl = { workspace = true, optional = true }
derive-new = { workspace = true }
half = { workspace = true }
rand = { workspace = true, default-features = false }
num-traits = { workspace = true }
num-complex = { workspace = true , default-features = false}
paste = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
burn-flex = { workspace=true,  features = ["complex"] }
#burn-tensor-testgen = { workspace=true, default-features = false }
# burn-backend-tests = { workspace=true, default-features = false, features = [
#     "std",
# ] }



[lints]
workspace = true
